add eas project

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -65,6 +65,13 @@
 				</div>
 				<div class="thumb_nail">
 					<div class="thumb_nail_container">
+						<a ng-href="https://zhengbangc.github.io/EAS-Prototype/"></a>
+						<h5>UIUC Logins</h5>
+						<p>Redesign the login pages for UIUC sites. A demo of the new interaction.</p>
+					</div>
+				</div>
+				<div class="thumb_nail">
+					<div class="thumb_nail_container">
 						<a ng-href="http://zhengbangc.github.io/wayfair-match"></a>
 						<h5>Wayfair Match</h5>
 						<p>Hackathon Project during my summer internship at Wayfair. It's a tinder for furniture to promote sales. </p>
