add codepen to contact

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -134,7 +134,7 @@
 			<a ng-href="https://mail.google.com/mail/?view=cm&fs=1&to=zchen94@illinois.edu">Email</a> <br>
 			<a ng-href="https://www.instagram.com/zhengbangc/">Instagram</a> /
 			<a ng-href="https://medium.com/@zhengbangchen">Medium</a> /
-			<a ng-href="https://www.facebook.com/zhengbang.chen.79">Facebook</a>
+			<a ng-href="http://codepen.io/zhengbangc/">Codepen</a>
 			<p class="copyrights">2016 &copy; Zhengbang Chen </p>
 	</div>
 </div>
