--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -548,7 +548,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 					}
 					&:nth-child(2){
 						.thumb_nail_container {
-							background-image: url('../data/images/eas_login.png');
+							background-image: url('../data/images/keyboard.png');
 						}
 					}
 					&:nth-child(3){
@@ -568,7 +568,7 @@ $openSans: 'Open Sans', Helvetica, sans-serif;
 					}
 					&:nth-child(6){
 						.thumb_nail_container {
-							background-image: url('../data/images/project_zappos.png');
+							background-image: url('../data/images/eas_login.png');
 						}
 					}
 					&:nth-child(7){
