--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -65,9 +65,9 @@
 				</div>
 				<div class="thumb_nail">
 					<div class="thumb_nail_container">
-						<a ng-href="https://zhengbangc.github.io/EAS-Prototype/"></a>
-						<h5>UIUC Logins</h5>
-						<p>Redesign the login pages for UIUC sites. A demo of the new interaction.</p>
+						<a ng-href="http://codepen.io/zhengbangc/full/GjaEjd/"></a>
+						<h5>A Simple Keyboard</h5>
+						<p>A desktop demo of a simple keyboard.</p>
 					</div>
 				</div>
 				<div class="thumb_nail">
@@ -89,6 +89,13 @@
 						<a ng-href="https://www.youtube.com/watch?v=b1415lmek-E"></a>
 						<h5>Scheduler</h5>
 						<p>Built with AngularJS, NodeJS and MongoDB, this app allow studetns to choose classes and built a calendar</p>
+					</div>
+				</div>
+				<div class="thumb_nail">
+					<div class="thumb_nail_container">
+						<a ng-href="https://zhengbangc.github.io/EAS-Prototype/"></a>
+						<h5>UIUC Login</h5>
+						<p>Redesign the login pages for UIUC sites. A demo of the new interaction.</p>
 					</div>
 				</div>
 				<div class="thumb_nail">
