--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -19,6 +19,12 @@
 		<div class="experience">
 			<ul>
 				<li>
+					<h5>Software Development Engineer</h5>
+					<span class="fa fa-angle-right"></span>
+					<h7>Amazon, July 2017 - Present</h7>
+					<p>Developing softwares on the Alexa Skills Content Ops team. Focusing on providing real-time solutions to skills certifications and data streaming.</p>
+				</li>
+				<li>
 					<h5>Software Engineering Intern</h5>
 					<span class="fa fa-angle-right"></span>
 					<h7>Wayfair LLC, June 2016 - August 2016</h7>
@@ -27,14 +33,14 @@
 				<li>
 					<h5>Front-end Visual Developer</h5>
 					<span class="fa fa-angle-right"></span>
-					<h7>AITS@UIUC, August 2016 - Present</h7>
-					<p>Designing and building at <a ng-href="https://www.aits.uillinois.edu/">Administrative Information Technology Services at UIUC</a>. Assist in designing interfaces for university applications to make information more viable. Refine the front end of various university web and mobile applications. Sketch, SASS, and JS are my daily bytes.</p>
+					<h7>AITS@UIUC, August 2016 - Decemeber 2017</h7>
+					<p>Designed and built at <a ng-href="https://www.aits.uillinois.edu/">Administrative Information Technology Services at UIUC</a>. Assisted in designing interfaces for university applications to make information more viable. Refined the front end of various university web and mobile applications. Sketch, SASS, and JS are my daily bytes.</p>
 				</li>
 				<li>
 					<h5>President</h5>
 					<span class="fa fa-angle-right"></span>
-					<h7>IEEE UIUC, May 2016 - Present</h7>
-					<p>Lead and oversee the executive board of <a ng-href="https://ieee.illinois.edu/">Institute of Electrical and Electronic Engineers (IEEE), UIUC</a> at optimal to produce inspiring techincal, professional and social events to the general student body. Sustain organizational relations with university departments, other student organizations and companies. Promote advancement and development of members' technical and academic well-being.</p>
+					<h7>IEEE UIUC, May 2016 - May 2017</h7>
+					<p>Led and oversaw the executive board of <a ng-href="https://ieee.illinois.edu/">Institute of Electrical and Electronic Engineers (IEEE), UIUC</a> at optimal to produce inspiring techincal, professional and social events to the general student body. Sustained organizational relations with university departments, other student organizations and companies. Promoted advancement and development of members' technical and academic well-being.</p>
 				</li>
 				<li>
 					<h5>Front-end Developer</h5>
